# stochastic_uzawa

./: .gitignore  CMakeLists.txt  README.md  build_python.sh  pyproject.toml  test_second_regression_verbose.cpp
apps/: README.md  interactive_experiment.py
bindings/: python_bindings.cpp
data/: NumericSchemeParams.pot  Parameters.pot  Parameters_template.pot  README.md
include/: CommonTypes.hpp  Constraints.hpp  Interface.hpp  Kernel.hpp  LSMCR.hpp  NumericSchemeParams.hpp  NystromScheme.hpp  OUParams.hpp  OUSimulator.hpp  Parameters.hpp  StochasticUzawaSolver.hpp
scripts/: README.md  cleaner.sh  create_venv.sh  python_setup.sh  run_app.sh
src/: Interface.cpp  Kernel.cpp  LSMCR.cpp  NumericSchemeParams.cpp  NystromScheme.cpp  OUSimulator.cpp  Parameters.cpp  StochasticUzawaSolver.cpp  main.cpp
tests/cpp/: README.md  test_cpp.cpp  test_cpp.sh
tests/python/: README.md  test_bindings.py  test_bindings.sh
tests/test1/: big_output_1.txt  big_output_2.txt  big_test.cpp
tests/test1/data/: data_big.pot
tests/test2/: verbose_output_1.txt  verbose_output_3.txt  verbose_test  verbose_test.cpp
tests/test2/data/: data_big.pot
tests_old/test1/: big_test
tests_old/test1/data/: OU_data.pot
tests_old/test2/: verbose_output_2.txt  verbose_output_4.txt
tests_old/test2/data/: OU_data.pot
tools/: README.md  plotter.py
